teste de commit
este commit foi feito somente para testar o git desktop

--- a/OswaldoFlix/assets/css/style.css
+++ b/OswaldoFlix/assets/css/style.css
@@ -195,6 +195,7 @@ figcaption {
 .rodape .rodape__midiasSociais ul {
     display: flex;
     flex-wrap: nowrap;
+    margin: 0 0 0 0 ;
 }
 
 .rodape .rodape__midiasSociais ul img {
